fixed all minor bugs

--- a/website/signup.html
+++ b/website/signup.html
@@ -32,12 +32,12 @@
         }
         .login-container{
             backdrop-filter: blur(10px);
-            margin-top: 50px;
+            margin-bottom: 100px;
             width: 40vw;
             height: 500px;
             position: relative;
-            background-color: rgba(124, 124, 124, 0.412);
-            top: 45px;
+            background-color: rgba(58, 58, 58, 0.288);
+            top: 20px;
             border-radius: 10px;
         }
         
@@ -67,7 +67,7 @@
     <img style="
     top: 10px;
     margin-left: 10px;
-    position: fixed;
+    position: relative;
     width: 80px;
     height: 80px;" src="./web_images/3d_glow.webp" alt="Dataverse Logo">
     <center>
