--- a/website/login.html
+++ b/website/login.html
@@ -36,8 +36,9 @@
             padding-bottom: 10px;
             height: min-content;
             position: relative;
-            background-color: rgba(124, 124, 124, 0.412);
-            top: 45px;
+            background-color: rgba(58, 58, 58, 0.288);
+            box-shadow: 0 0 5px black;
+            top:20px;
             backdrop-filter: blur(10px);
             border-radius: 10px;
         }
@@ -45,6 +46,7 @@
         @media screen and (max-width: 660px) {
             .login-container{
                 width: 90vw;
+                margin-bottom: 100px;
             }
             .image1{
                 height:100px;
@@ -68,11 +70,11 @@
     <img style="
     top:10px;
     margin-left: 10px;
-    position: fixed;
+    position: relative;
     width: 80px;
     height: 80px;" src="./web_images/3d_glow.webp" alt="Dataverse Logo">
     <center>
-        <div class="login-container" style="padding-top: 20px; margin-top: 50px;">
+        <div class="login-container" style="padding-top: 20px; margin-top: 0px;">
             <h1 style="text-align: center; color: rgb(255, 255, 255); font-weight: 400; font-size: 35px">HEY! WELCOME BACK</h1>
             <h6 style="text-align: center; color: rgb(197 197 197); font-weight: 500; font-size: 18px;">Please Enter your Details</h6>
             <div style="text-align: left; margin-left: 10%;" class="mb-3">
