fixed all minor bugs

--- a/website/contributor.html
+++ b/website/contributor.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dataverse Contributors</title>
     <link rel="stylesheet" href="contributor.css">
+    <link rel="shortcut icon" href="website/web_images/3dlogo.svg" type="image/x-icon">
 </head>
 <body>
         <div class="containerr">
