--- a/website/license.html
+++ b/website/license.html
@@ -112,5 +112,6 @@
     <a href="../index.html"><button class="goBack">Go To Home</button></a>
 
     <script src="license.js"></script>
+    <script src="website/script.js"></script>
 </body>
 </html>
