--- a/website/codeOfconduct.html
+++ b/website/codeOfconduct.html
@@ -177,6 +177,7 @@
     <a href="../index.html"><button class="goBack">Go To Home</button></a>
     
     <script src="codeOfconduct.js"></script>
+    <script src="website/script.js"></script>
 
 </body>
 </html>
