--- a/website/signup.html
+++ b/website/signup.html
@@ -8,57 +8,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
     <style>
-        body{
-            background-color: black;
-        }
-        .image1{
-            width: 43%;
-            height: 90.9%;
-            object-fit: cover;
-            position: absolute;
-            opacity: 70%;
-            left: 75%;
-            top: -10%;
-            rotate: 36deg;
-        }
-        .image2{
-            width: 37%;
-            height: 47%;
-            position: absolute;
-            object-fit: contain;
-            opacity: 90%;
-            top: 32%;
-            right: 84%;
-            rotate: -46deg;
-        }
-        .login-container{
-            backdrop-filter: blur(10px);
-            margin-bottom: 100px;
-            width: 40vw;
-            height: 500px;
-            position: relative;
-            background-color: rgba(58, 58, 58, 0.288);
-            top: 20px;
-            border-radius: 10px;
-        }
-        
+       body {
+    background-color: black;
+}
 
-        @media screen and (max-width: 660px) {
-            .login-container{
-                width: 90vw;
-            }
-            .image1{
-                height:100px;
-                display: none;
-            }
-            .image2{
-                height: 100px;
-                overflow-x: hidden;
-            }
-            input{
-                width: 90%;
-            }
-        }
+.image1 {
+    width: 43%;
+    height: 90.9%;
+    object-fit: cover;
+    position: absolute;
+    opacity: 70%;
+    left: 75%;
+    top: -10%;
+    rotate: 36deg;
+}
+
+.image2 {
+    width: 37%;
+    height: 47%;
+    position: absolute;
+    object-fit: contain;
+    opacity: 90%;
+    top: 32%;
+    right: 84%;
+}
+
+.logo {
+    top: 10px;
+    margin-left: 10px;
+    position: relative;
+    width: 80px;
+    height: 80px;
+}
+
+.login-container {
+    backdrop-filter: blur(10px);
+    margin-bottom: 100px;
+    width: 40vw;
+    height: auto; /* Changed to auto to fit content */
+    position: relative;
+    background-color: rgba(58, 58, 58, 0.288);
+    top: 20px;
+    border-radius: 10px;
+    padding: 20px; /* Added padding for better spacing */
+    color: white; /* Text color for the whole container */
+}
+
+.mb-3 {
+    margin-bottom: 1rem; /* Standard Bootstrap spacing */
+}
+
+.strength-meter {
+    height: 4px; /* Adjust height as needed */
+    width: 80%; /* Match the width of the input */
+    margin-top: 5px; /* Space between input and strength meter */
+    background-color: #e0e0e0; /* Default background */
+    border-radius: 5px; /* Rounded corners */
+}
+
+.strength-weak {
+    background-color: red; /* Weak strength color */
+}
+
+.strength-medium {
+    background-color: orange; /* Medium strength color */
+}
+
+.strength-strong {
+    background-color: green; /* Strong strength color */
+}
+
+@media screen and (max-width: 660px) {
+    .login-container {
+        width: 90vw;
+    }
+    .image1 {
+        height: 100px;
+        display: none;
+    }
+    .image2 {
+        height: 100px;
+        overflow-x: hidden;
+    }
+    input {
+        width: 90%;
+    }
+}
+ 
     </style>
 </head>
 
@@ -86,6 +122,8 @@
                     <label for="confirmPasswordInput" class="form-label" style="color: white;">Confirm Password</label>
                     <input type="password" placeholder="Confirm your Password" id="confirmPasswordInput" class="form-control" aria-describedby="passwordHelpBlock" style="width: 90%; margin-top: -5px">
                 </div>
+                <div id="passwordStrength" class="strength-meter"></div>
+                <span id="strengthLabel" style="color: white; font-size: 14px; margin-top: 5px; display: none;"></span>
                 <div id="passwordHelpBlock" class="form-text" style="width: 90%; text-align: left; margin-top: -10px; margin-left: 10px; color: white;">
                     <span style="color: rgb(255, 255, 255); font-size: 14px; position: relative;">Your password must be :</span><br>
                     • 8-20 characters long.<br>
@@ -96,42 +134,110 @@
             <div style="text-align: center; margin-top: 10px;">
                 <p>Already have an account? <a href="login.html" style="text-decoration: underline; color: #004ab7;">Login</a></p>
             </div>
+            <!-- Error container for feedback -->
+            <div id="errorContainer" class="alert alert-danger" style="display: none;"></div>
+
         </div>
         <a href="../index.html"><button class="goBack">Go To Home</button></a>
         <script>
-            document.getElementById('signupButton').addEventListener('click', function() {
-                const emailInput = document.getElementById('emailInput');
-                const passwordInput = document.getElementById('passwordInput');
-                const confirmPasswordInput = document.getElementById('confirmPasswordInput');
-                const errorContainer = document.getElementById('errorContainer');
-                const emailValue = emailInput.value.trim();
-                const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-                // Trusted email domains
-                const trustedDomains = ["gmail.com", "outlook.com", "yahoo.com", "hotmail.com" , "protonmail.com" , "icloud.com" , "tutanota.com"];
-                const emailDomain = emailValue.split('@')[1];
-                // Clear previous error messages
-                errorContainer.style.display = 'none';
-                errorContainer.innerHTML = '';
-                // Validate email format and trusted domain
-                if (!emailRegex.test(emailValue) || !trustedDomains.includes(emailDomain)) {
-                    errorContainer.innerHTML = 'Please use a valid email address from trusted providers (e.g., Gmail, Outlook, Yahoo) etc.';
-                    errorContainer.style.display = 'block'; // Show error message
-                    return;
-                }
-                // Check if passwords match
-                if (passwordInput.value !== confirmPasswordInput.value) {
-                    errorContainer.innerHTML = 'Both passwords do not match.';
-                    errorContainer.style.display = 'block'; // Show error message
-                    return;
-                }
-                // Clear input fields
-                emailInput.value = '';
-                passwordInput.value = '';
-                confirmPasswordInput.value = '';
-                // Redirect to login page
-                alert('Your account has been created successfully!');
-                window.location.href = 'login.html';
-            });
+            let loginAttempts = 0; // Counter for login attempts
+const maxAttempts = 5; // Set the maximum number of allowed login attempts
+function updatePasswordStrength(password) {
+    const strengthMeter = document.getElementById('passwordStrength');
+    const strengthLabel = document.getElementById('strengthLabel'); // Get the strength label
+    let strength = 0;
+    // Increase strength based on conditions
+    if (password.length >= 8) strength++; // Length
+    if (/[A-Z]/.test(password)) strength++; // Uppercase
+    if (/[a-z]/.test(password)) strength++; // Lowercase
+    if (/\d/.test(password)) strength++; // Number
+    if (/[!@#$%^&*]/.test(password)) strength++; // Special character
+
+    // Update meter class based on strength
+    strengthMeter.className = 'strength-meter'; // Reset classes
+    if (strength === 1) {
+        strengthMeter.classList.add('strength-weak');
+        strengthLabel.textContent = 'Weak'; // Set strength label text
+        strengthLabel.style.display = 'block'; // Show the label
+    } else if (strength === 2 || strength === 3) {
+        strengthMeter.classList.add('strength-medium');
+        strengthLabel.textContent = 'Moderate'; // Set strength label text
+        strengthLabel.style.display = 'block'; // Show the label
+    } else if (strength === 4 || strength === 5) {
+        strengthMeter.classList.add('strength-strong');
+        strengthLabel.textContent = 'Strong'; // Set strength label text
+        strengthLabel.style.display = 'block'; // Show the label
+    } else {
+        strengthLabel.style.display = 'none'; // Hide the label if strength is zero
+    }
+}
+
+
+    // Add event listener to the password input field
+    document.getElementById('passwordInput').addEventListener('input', function() {
+        updatePasswordStrength(this.value);
+    });
+
+document.getElementById('signupButton').addEventListener('click', function() {
+    const emailInput = document.getElementById('emailInput');
+    const passwordInput = document.getElementById('passwordInput');
+    const confirmPasswordInput = document.getElementById('confirmPasswordInput');
+
+    const emailValue = emailInput.value.trim();
+    const passwordValue = passwordInput.value.trim();
+
+    // Updated email regex to allow valid email formats for all domains
+    const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+    const passwordRegex = /^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[!@#$%^&*])[A-Za-z\d!@#$%^&*]{8,}$/;
+
+    // Check if email and password are valid
+    const isEmailValid = emailRegex.test(emailValue);
+    const isPasswordValid = passwordRegex.test(passwordValue);
+
+    if (!isEmailValid && !isPasswordValid) {
+        alert('Please enter a valid email address and follow the specific password guidelines.');
+        return;
+    } else if (!isEmailValid) {
+        alert('Please enter a valid email address.');
+        return;
+    } else if (!isPasswordValid) {
+        alert('Password must be at least 8 characters long, include at least one uppercase letter, one lowercase letter, one digit, and one special character.');
+        return;
+    }
+
+    // Increment login attempt counter
+    loginAttempts++;
+    if (loginAttempts > maxAttempts) {
+        alert('Too many login attempts. Please try again later.');
+        return;
+    }
+
+    // Trusted email domains
+    const trustedDomains = ["gmail.com", "outlook.com", "yahoo.com", "hotmail.com", "protonmail.com", "icloud.com", "tutanota.com"];
+    const emailDomain = emailValue.split('@')[1];
+
+    // Validate email format and trusted domain
+    if (!trustedDomains.includes(emailDomain)) {
+        alert('Please use a valid email address from trusted providers (e.g., Gmail, Outlook, Yahoo, etc.).');
+        return;
+    }
+
+    // Check if passwords match
+    if (passwordInput.value !== confirmPasswordInput.value) {
+        alert('Both passwords do not match.');
+        return;
+    }
+
+    // Clear input fields
+    emailInput.value = '';
+    passwordInput.value = '';
+    confirmPasswordInput.value = '';
+
+    // Redirect to login page
+    alert('Your account has been created successfully!');
+    window.location.href = 'login.html';
+});
+
         </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
         <script src="website/script.js"></script>
