--- a/website/signup.html
+++ b/website/signup.html
@@ -66,7 +66,7 @@
     <img class="image2" src="./web_images/2dglowhalfbg-removebg-preview.png" alt="sign_bg">
     <img style="top: 10px; margin-left: 10px; position: relative; width: 80px; height: 80px;" src="./web_images/3d_glow.webp" alt="Dataverse Logo">
     <center>
-        <div class="login-container" style="padding-top: 20px; margin-left: 700px;">
+        <div class="login-container" style="padding-top: 20px;">
             <h1 style="text-align: center; color: rgb(255, 255, 255); font-weight: 400; font: sans-serif;">SIGN UP</h1>
             <div id="errorContainer" class="error-message"></div>
             <div style="text-align: left; margin-left: 10%;" class="mb-3">
@@ -96,7 +96,7 @@
 
             <button type="button" class="btn btn-primary" id="signupButton" style="width: 60%; margin-top: 15px; font-weight: 400;">SIGN UP</button>
             <div style="text-align: center; margin-top: 10px;">
-                <p>Already have an account? <a href="login.html" style="text-decoration: underline; color: #004ab7;">Login</a></p>
+                <p style="color: white;">Already have an account? <a href="login.html" style="text-decoration: underline; color: #004ab7;">Login</a></p>
             </div>
         </div>
         <a href="../index.html"><button class="goBack">Go To Home</button></a>
