fixed all minor bugs

--- a/website/pages/contributor.html
+++ b/website/pages/contributor.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dataverse Contributors</title>
-    <link rel="stylesheet" href="contributor.css">
-    <link rel="shortcut icon" href="website/web_images/3dlogo.svg" type="image/x-icon">
+    <title>Dataverse's Contributors</title>
+    <link rel="stylesheet" href="../styles/contributor.css">
+    <link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon">
 </head>
 <body>
         <div class="containerr">
@@ -39,8 +39,8 @@
                 <div id="notification" class="notification hidden"></div>
             </section>
         </div>
-        <a href="../index.html"><button class="goBack">Go To Home</button></a>
+        <a href="../../index.html"><button class="goBack">Go To Home</button></a>
 
-    <script src="contributor.js"></script>
+    <script src="../scripts/contributor.js"></script>
 </body>
 </html>
