--- a/website/pages/license.html
+++ b/website/pages/license.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dataverse MIT License</title>
-    <link rel="shortcut icon" href="web_images/3dlogo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
+    <title>Dataverse | MIT License</title>
+    <link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
 </head>
 
@@ -20,15 +20,15 @@
                 <img src="https://cdn-icons-png.freepik.com/256/467/467619.png?semt=ais_hybrid" alt="" class="copy" id="sun">
             </button>
             <button id="defaultButton" onclick="systemDefault()">
-                <img src="web_images/settings.webp" class="copy" id="default">
+                <img src="../web_images/settings.webp" class="copy" id="default">
             </button>
             
         </div>
     </div>
     <nav id="navbar">
-        <img src="web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
-        <img src="web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
-        <a href="login.html"><button class="loginSignupbtn">Login
+        <img src="../web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
+        <img src="../web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
+        <a href="../../login.html"><button class="loginSignupbtn">Login
         </button></a>
     </nav>
     
@@ -42,7 +42,7 @@
     <div class="plane" id="plane">
         <table>
             <tr>
-                <td><a href="../index.html" class="table_link">Home</a></td>
+                <td><a href="../../index.html" class="table_link">Home</a></td>
             </tr>
             <tr>
                 <td><a href="https://github.com/multiverseweb/Dataverse" class="table_link">Github Repository</a></td>
@@ -109,9 +109,9 @@
         OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
         SOFTWARE.
     </div>
-    <a href="../index.html"><button class="goBack">Go To Home</button></a>
+    <a href="../../index.html"><button class="goBack">Go To Home</button></a>
 
-    <script src="license.js"></script>
-    <script src="website/script.js"></script>
+    <script src="../scripts/license.js"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
