--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Dataverse</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
     <link rel="shortcut icon" href="website/web_images/3dlogo.svg" type="image/x-icon">
-    <link rel="stylesheet" href="website/style.css">
+    <link rel="stylesheet" href="website/styles/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -45,7 +45,7 @@
         <img src="website/web_images/3dlogo.svg" alt="Dataverse Logo" class="logo" id="normal">
         <img src="website/web_images/3d_glow.webp" alt="Dataverse Logo" class="logo" id="glow">
         <div class="scrollBar" id="progress_bar"></div> <!--PROGRESS BAR-->
-        <a href="website/login.html">
+        <a href="website/pages/login.html">
             <button class="loginSignupbtn">
               <span class="button-text">Login</span>
               <img src="website/web_images/user.png" alt="User Icon" class="user-icon">
@@ -73,7 +73,7 @@
                         class="table_link">Documentation</a></td>
             </tr>
             <tr>
-                <td><a href="website/contributor.html" class="table_link">Contributors</a></td>
+                <td><a href="website/pages/contributor.html" class="table_link">Contributors</a></td>
             </tr>
             <tr>
                 <td>
@@ -82,10 +82,10 @@
                 </td>
             </tr>
             <tr>
-                <td><a href="website/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a></td>
+                <td><a href="website/pages/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a></td>
             </tr>
             <tr>
-                <td><a href="website/license.html" class="table_link">License</a></td>
+                <td><a href="website/pages/license.html" class="table_link">License</a></td>
             </tr>
         </table>
     </div>
@@ -262,9 +262,9 @@
             <div class="link_class">
                 <a href="https://github.com/multiverseweb/Dataverse/blob/main/README.md"
                     class="table_link">Documentation</a>
-                <a href="./website/contributor.html" class="table_link">Contributors</a>
-                <a href="website/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a>
-                <a href="website/license.html" class="table_link">License</a>
+                <a href="./website/pages/contributor.html" class="table_link">Contributors</a>
+                <a href="website/pages/codeOfconduct.html" class="table_link" target="_blank">Code of Conduct</a>
+                <a href="website/pages/license.html" class="table_link">License</a>
             </div>
             <div class="link_class">
                 <a href="https://www.figma.com/proto/BBbXARgpxercxacjm0qpgX/Dataverse?type=design&node-id=45-25&t=zMFBUgENaIeqhRYZ-1&scaling=scale-down-width&page-id=0%3A1&starting-point-node-id=22%3A310&show-proto-sidebar=1&mode=design"
@@ -299,7 +299,7 @@
     </div>
     <div class="end_line"></div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
-    <script src="website/script.js"></script>
+    <script src="website/scripts/script.js"></script>
 
 
 </body>
