--- a/website/pages/signup.html
+++ b/website/pages/signup.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../styles/style.css">
     <meta charset="UTF-8">
-    <link rel="shortcut icon" href="website/web_images/3dlogo.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up</title>
+    <title>Sign Up to Dataverse</title>
     <style>
         body {
             background-color: black;
@@ -62,9 +62,9 @@
 </head>
 
 <body>
-    <img class="image1" src="./web_images/2dglow.png" alt="sign_bg">
-    <img class="image2" src="./web_images/2dglowhalfbg-removebg-preview.png" alt="sign_bg">
-    <img style="top: 10px; margin-left: 10px; position: relative; width: 80px; height: 80px;" src="./web_images/3d_glow.webp" alt="Dataverse Logo">
+    <img class="image1" src="../web_images/2dglow.png" alt="sign_bg">
+    <img class="image2" src="../web_images/2dglowhalfbg-removebg-preview.png" alt="sign_bg">
+    <img style="top: 10px; margin-left: 10px; position: relative; width: 80px; height: 80px;" src="../web_images/3d_glow.webp" alt="Dataverse Logo">
     <center>
         <div class="login-container" style="padding-top: 20px;">
             <h1 style="text-align: center; color: rgb(255, 255, 255); font-weight: 400; font: sans-serif;">SIGN UP</h1>
@@ -99,7 +99,7 @@
                 <p style="color: white;">Already have an account? <a href="login.html" style="text-decoration: underline; color: #004ab7;">Login</a></p>
             </div>
         </div>
-        <a href="../index.html"><button class="goBack">Go To Home</button></a>
+        <a href="../../index.html"><button class="goBack">Go To Home</button></a>
         <script>
             // Function to handle signup
             document.getElementById('signupButton').addEventListener('click', function () {
@@ -161,6 +161,6 @@
             };
         </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="website/script.js"></script>
+        <script src="../scripts/script.js"></script>
     </body>
 </html>
