--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <p class="tejas_credits" style="color:rgb(187, 187, 187); margin-top: 20px;"> Designed & Developed by Tejas
             Gupta</p>
         <br>
-        <p style="color:rgb(177, 177, 177);">&copy; <span id="copyright">32949832</span> Tejas Gupta</p>
+        <p style="color:rgb(177, 177, 177);">&copy; <span id="copyright">32949832</span> <a href=".github/404.html">Tejas Gupta</a></p>
     </div>
     <div class="end_line"></div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
