fixed repo structure

--- a/.github/404.html
+++ b/.github/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Page Not Found :(</title>
-    <link rel="stylesheet" href="../website/404.css">
+    <link rel="stylesheet" href="../website/styles/404.css">
     <link rel="shortcut icon" href="../website/web_images/3dlogo.svg" type="image/x-icon">
 </head>
 <body>
