--- a/website/login.html
+++ b/website/login.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="shortcut icon" href="website/web_images/3dlogo.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="shortcut icon" href="../web_images/3dlogo.svg" type="image/x-icon">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Login to Dataverse</title>
     <style>
-        body{
+        body {
             background-color: black;
             overflow-x: hidden;
         }
-        .image1{
+        .image1 {
             width: 43%;
             height: 90.9%;
             object-fit: cover;
@@ -22,7 +22,7 @@
             top: -10%;
             rotate: 36deg;
         }
-        .image2{
+        .image2 {
             width: 37%;
             height: 47%;
             position: absolute;
@@ -32,48 +32,46 @@
             right: 84%;
             rotate: -46deg;
         }
-        .login-container{
+        .login-container {
             width: 40vw;
             padding-bottom: 10px;
             height: min-content;
             position: relative;
             background-color: rgba(58, 58, 58, 0.288);
             box-shadow: 0 0 5px black;
-            top:20px;
+            top: 20px;
             backdrop-filter: blur(10px);
             border-radius: 10px;
         }
+        .form-check-input:checked {
+    background-color: #004ab7; /* Change to your desired color */
+    border-color: #004ab7; /* Change to your desired color */
+}
 
         @media screen and (max-width: 660px) {
-            .login-container{
+            .login-container {
                 width: 90vw;
                 margin-bottom: 100px;
             }
-            .image1{
-                height:100px;
+            .image1 {
+                height: 100px;
                 display: none;
             }
-            .image2{
+            .image2 {
                 height: 100px;
                 overflow-x: hidden;
             }
-            #forget{
+            #forget {
                 width: 90%;
             }
         }
-        
     </style>
-</head> 
+</head>
 
-<body >
-    <img class="image1"  src="./web_images/2dglow.png" alt="login_bg">
-    <img class="image2"  src="./web_images/2dglowhalfbg-removebg-preview.png" alt="login_bg">
-    <img style="
-    top:10px;
-    margin-left: 10px;
-    position: relative;
-    width: 80px;
-    height: 80px;" src="./web_images/3d_glow.webp" alt="Dataverse Logo">
+<body>
+    <img class="image1" src="../web_images/2dglow.png" alt="login_bg">
+    <img class="image2" src="../web_images/2dglowhalfbg-removebg-preview.png" alt="login_bg">
+    <img style="top:10px; margin-left: 10px; position: relative; width: 80px; height: 80px;" src="../web_images/3d_glow.webp" alt="Dataverse Logo">
     <center>
         <div class="login-container" style="padding-top: 20px; margin-top: 0px;">
             <h1 style="text-align: center; color: rgb(255, 255, 255); font-weight: 400; font-size: 35px">HEY! WELCOME BACK</h1>
@@ -93,32 +91,57 @@
                     • Must not contain spaces, special characters, or emojis.
                 </div>
             </div>
+            <!-- Remember Me Checkbox -->
+            <div style="text-align: left; margin-left: 35%;">
+                <input type="checkbox" id="rememberMe" style="margin-top: -5px; width: 15px; height: 15px;">
+                <label for="rememberMe" style="color: white;">Remember Me</label>
+            </div>
             <button type="button" class="btn btn-primary" id="loginButton" style="width: 50%; font-weight: 400;">LOGIN</button>
             <div style="text-align: center; margin-top: 10px;">
-                <p>Don't have an account ?  <a href="signup.html" style="text-decoration: underline; color: #004ab7;"> Sign Up</a></p>
+                <p style="color: white;">Don't have an account? <a href="signup.html" style="text-decoration: underline; color: #004ab7;"> Sign Up</a></p>
             </div>
         </div>
         <!--login form end-->
     </center>
-    <a href="../index.html"><button class="goBack">Go To Home</button></a>
+    <a href="../../index.html"><button class="goBack">Go To Home</button></a>
     <script>
+        // On page load, check local storage for email
+        window.onload = function() {
+            const savedEmail = localStorage.getItem('email');
+            if (savedEmail) {
+                document.getElementById('emailInput').value = savedEmail;
+                document.getElementById('rememberMe').checked = true;
+            }
+        };
+
         document.getElementById('loginButton').addEventListener('click', function() {
             const emailInput = document.getElementById('emailInput');
             const passwordInput = document.getElementById('passwordInput');
             const emailValue = emailInput.value.trim();
-    const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
-    if (!emailRegex.test(emailValue)) {
-        alert('Invalid email address');
-        return;
-    }
+            const emailRegex = /^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+            if (!emailRegex.test(emailValue)) {
+                alert('Invalid email address');
+                return;
+            }
+
+            // Check if "Remember Me" is checked
+            const rememberMe = document.getElementById('rememberMe').checked;
+            if (rememberMe) {
+                localStorage.setItem('email', emailValue);
+            } else {
+                localStorage.removeItem('email');
+            }
+
+            // Clear the input fields
             emailInput.value = '';
             passwordInput.value = '';
             // Redirect to index.html
-            window.location.href = '/index.html';
             alert('Login successful!');
+            localStorage.setItem('loggedInEmail',emailInput.value);
+            window.location.href = 'afterloginpage.html';
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <script src="website/script.js"></script>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
